RESOLVED FIXED43851
[Qt] QtTestBrowser: switching between QWebView and QGraphicsWebView modes is broken
https://bugs.webkit.org/show_bug.cgi?id=43851
Summary [Qt] QtTestBrowser: switching between QWebView and QGraphicsWebView modes is ...
Antonio Gomes
Reported 2010-08-11 07:07:22 PDT
If one launches the QtTestBrowser in QWebView (default) mode, and switch to GraphicsView based mode (Developer->GraphicsView->Toggle use of Graphics View), it does not initializate a QGraphicsWebView mode, but a QWebView again. After that, all menus under Developer->GraphicsView gets activated but are *not* funcional, leading to crashes sometimes. Patch coming ...
Attachments
patch v1 (3.39 KB, patch)
2010-08-11 07:23 PDT, Antonio Gomes
no flags
(committed with r65160, r=hausmann) patch v2 (3.96 KB, patch)
2010-08-11 07:44 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2010-08-11 07:23:15 PDT
Created attachment 64111 [details] patch v1 All window options data (including the bool holding if the view is either QWebView or QGraphicsWebView based) is stored in m_windowOptions, a class member of LauncherWindow. When toggle the view from QWebView to QGraphicsWebView based (and vice-versa), we were not updating LauncherWindow::WindowOptions::m_useGraphicsView bit, and then things were getting broken. Patch addresses this issue.
Early Warning System Bot
Comment 2 2010-08-11 07:29:22 PDT
Antonio Gomes
Comment 3 2010-08-11 07:44:13 PDT
Created attachment 64113 [details] (committed with r65160, r=hausmann) patch v2 Same as patch v1 (attachment 64111 [details]) but fixed the build bustage. See comment #1 for summary.
Simon Hausmann
Comment 4 2010-08-11 08:05:30 PDT
Comment on attachment 64113 [details] (committed with r65160, r=hausmann) patch v2 r=me
Antonio Gomes
Comment 5 2010-08-11 09:02:43 PDT
Comment on attachment 64113 [details] (committed with r65160, r=hausmann) patch v2 Clearing flags on attachment: 64113 Committed r65160: <http://trac.webkit.org/changeset/r65160>
Simon Hausmann
Comment 6 2010-08-12 04:41:28 PDT
Revision r65160 cherry-picked into qtwebkit-2.1 with commit b8bfbbe471d19ae0bb96ec1cdc63b4f0f1e08a42
Note You need to log in before you can comment on or make changes to this bug.