2010-08-11  Antonio Gomes  <tonikitoo@webkit.org>

Reviewed by Simon Hausmann.

        [Qt] QtTestBrowser: switching between QWebView and QGraphicsWebView modes is broken
        https://bugs.webkit.org/show_bug.cgi?id=43851

        All window options data (including the bool holding if the view is either QWebView or
        QGraphicsWebView based) is stored in m_windowOptions, a class member of LauncherWindow.
        When toggle the view from QWebView to QGraphicsWebView based (and vice-versa), we were
        not updating LauncherWindow::WindowOptions::m_useGraphicsView bit, and then things were
        getting broken.

        Patch addresses this issue.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::toggleWebView):
        (LauncherWindow::toggleAcceleratedCompositing):

Canonical link: https://commits.webkit.org/55962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65160 268f45cc-cd09-0410-ab3c-d52691b4dbfc