WebKitTools/QtTestBrowser/launcherwindow.h
@@ -151,6 +151,7 @@ protected slots:
     void initializeView();
 
     void setTouchMocking(bool on);
+    void toggleWebView(bool graphicsBased);
     void toggleAcceleratedCompositing(bool toggle);
     void toggleTiledBackingStore(bool toggle);
     void toggleResizesToContents(bool toggle);
